<?xml version="1.0"?>
<package format="2">
  <name>val_gazebo</name>
  <version>0.0.0</version>
  <description>models and worlds for SRC</description>
  <maintainer email="mitranopeter@gmail.com">peter</maintainer>
  <license>WTFPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
