<?xml version="1.0"?>
<package>
<name>tough_controller_interface</name>
<version>0.1.0</version>
<description>The tough_controller_interface package</description>

  <maintainer email="sumanth@todo.todo">sumanth</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/tough_controller_interface</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ihmc_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tough_common</build_depend>
   <run_depend>geometry_msgs</run_depend>
  <build_depend>tough_common</build_depend>
  <build_depend>gtest</build_depend>
  <run_depend>ihmc_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tough_common</run_depend>
  <run_depend>val_description</run_depend>
  <run_depend>gtest</run_depend>

  
</package>

