<?xml version="1.0"?>
<package>
  <name>val_manipulation</name>
  <version>0.0.0</version>
  <description>The val_manipulation package</description>

  <maintainer email="sumanth.724@gmail.com">sumanth</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/val_manipulation</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>tough_common</build_depend>
  <build_depend>val_footstep</build_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>tough_common</run_depend>
  <run_depend>val_description</run_depend>
  <run_depend>val_footstep</run_depend>
</package>
